--- a/compositing_shaders/slides/compositing_shaders_slides.tex
+++ b/compositing_shaders/slides/compositing_shaders_slides.tex
@@ -347,10 +347,6 @@ effects Effect \{
     % jak ComposedShader
   \item Effects are added to the~base internal shader.
     % (Oversimplifying a~little.)
-  \item Standard X3D \texttt{ComposedShader} node modifies the~base shader.
-    This way the~\texttt{ComposedShader} node becomes more powerful too:
-    it can cooperate with internal effects (like shadow maps),
-    and~user effects (from \texttt{Effect} nodes).
 \end{itemize}
 \end{frame}
 
@@ -371,8 +367,8 @@ Code: \texttt{demo\_models/compositing\_shaders/\\fresnel\_and\_toon.x3dv}
 
 \begin{frame}{Internal effects}
 Renderer can implement internal effects in a~similar way.
-This allows for really nice orthogonal implementation
-of some features:
+This allows for really nice orthogonal implementation of e.g.:
+%of some features:
 
 \begin{itemize}
   \item Shadow maps: filter particular light source,
@@ -380,12 +376,22 @@ of some features:
   \item Fog: mix final color with a~fog color.
 \end{itemize}
 
+Standard X3D \texttt{ComposedShader} node modifies the~base shader,
+so it's also better now.
+
 \begin{figure}
   \centering
   \includegraphics[width=2in]{../rhan_shrine_5_everything}
   \caption{Compositing two shadow maps and~bump mapping}
 \end{figure}
 \end{frame}
+
+%% \begin{frame}{We also extend }
+%%   \item Standard X3D \texttt{ComposedShader} node modifies the~base shader.
+%%     This way the~\texttt{ComposedShader} node becomes more powerful too:
+%%     it can cooperate with internal effects (like shadow maps),
+%%     and~user effects (from \texttt{Effect} nodes).
+%% \end{frame}
 
 \begin{frame}{Light sources effects}
 \begin{block}{Idea 2}
