Rename some pages to follow x3d_xxx names, not kambi_ or vrml_:
doit kambi_vrml_extensions_functions.php                   x3d_extensions_functions.php
doit kambi_vrml_extensions.php                             x3d_extensions.php
doit kambi_vrml_extensions_screen_effects.php              x3d_extensions_screen_effects.php
doit kambi_vrml_extensions_shadow_maps.php                 x3d_extensions_shadow_maps.php
doit kambi_vrml_extensions.txt                             x3d_extensions.txt
doit kambi_vrml_extensions_vrml1.php                       x3d_extensions_vrml1.php

doit vrml_engine_doc.php                                   engine_doc.php

doit vrml_implementation_cadgeometry.php                   x3d_implementation_cadgeometry.php
doit vrml_implementation_common.php                        x3d_implementation_common.php
doit vrml_implementation_core.php                          x3d_implementation_core.php
doit vrml_implementation_cubemaptexturing.php              x3d_implementation_cubemaptexturing.php
doit vrml_implementation_environmentaleffects.php          x3d_implementation_environmentaleffects.php
doit vrml_implementation_environmentalsensor.php           x3d_implementation_environmentalsensor.php
doit vrml_implementation_eventutilities.php                x3d_implementation_eventutilities.php
doit vrml_implementation_geometry2d.php                    x3d_implementation_geometry2d.php
doit vrml_implementation_geometry3d.php                    x3d_implementation_geometry3d.php
doit vrml_implementation_grouping.php                      x3d_implementation_grouping.php
doit vrml_implementation_hanim.php                         x3d_implementation_hanim.php
doit vrml_implementation_interpolation.php                 x3d_implementation_interpolation.php
doit vrml_implementation_keydevicesensor.php               x3d_implementation_keydevicesensor.php
doit vrml_implementation_lighting.php                      x3d_implementation_lighting.php
doit vrml_implementation_nav

--- a/compositing_shaders/compositing_shaders.bib
+++ b/compositing_shaders/compositing_shaders.bib
@@ -50,7 +50,7 @@
 %%   title = "{Bump mapping extensions}",
 %%   author = "Michalis Kamburelis",
 %%   year = "2008",
-%%   howpublished = "\webLink{http://vrmlengine.sourceforge.net/kambi_vrml_extensions.php#section_ext_bump_mapping}"
+%%   howpublished = "\webLink{http://vrmlengine.sourceforge.net/x3d_extensions.php#section_ext_bump_mapping}"
 %% }
 
 @misc{humus:volumetricfog,
@@ -66,14 +66,14 @@
 %%   title = "Tex coord generation dependent on bounding box",
 %%   author = "Michalis Kamburelis",
 %%   year = "2010",
-%%   howpublished = "\webLink{http://vrmlengine.sourceforge.net/kambi_vrml_extensions.php\#section_ext_tex_coord_bounds}"
+%%   howpublished = "\webLink{http://vrmlengine.sourceforge.net/x3d_extensions.php\#section_ext_tex_coord_bounds}"
 %% }
 
 %% misc{vrmleng:projectivetexturing,
 %%   title = "Projective texture mapping",
 %%   author = "Michalis Kamburelis",
 %%   year = "2010",
-%%   howpublished = "\webLink{http://vrmlengine.sourceforge.net/kambi_vrml_extensions_shadow_maps.php\#section_texture_projective}"
+%%   howpublished = "\webLink{http://vrmlengine.sourceforge.net/x3d_extensions_shadow_maps.php\#section_texture_projective}"
 %% }
 
 @misc{ogre:shader,
